--- a/style.css
+++ b/style.css
@@ -472,7 +472,14 @@ textarea:focus {
     background-color: #1a1a1a;
     padding: 20px 0;
 }
-
+.logo a {    
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+}
+.logo img {
+    margin: -1px 5px 0 0;
+}
 .header-top-area a {
     color: #fff;
 }
@@ -956,7 +963,7 @@ a.login-btn:hover {
 }
 
 .switch-handle:before {
-    content: "Monthly";
+    content: "За месяц";
     position: absolute;
     top: 40%;
     left: 0%;
@@ -973,7 +980,7 @@ a.login-btn:hover {
 }
 
 .switch-input:checked~.switch-handle:before {
-    content: "Yearly";
+    content: "За год";
 }
 
 span.discount {
