--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 logo">
-                    <a href="/"><img src="{{ site.baseurl }}/img/logo.png" data-retina="img/logo2.png" alt="">Soulhost</a>
+                    <a href="/soulhost.github.io/index-2.html"><img src="{{ site.baseurl }}/img/logo.png" data-retina="img/logo2.png" alt="">Soulhost</a>
                 </div>
             </div>
         </div>
@@ -13,11 +13,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-2 col-xs-3 logo">
-                    <a href="/"><img src="{{ site.baseurl }}/img/logo.png" data-retina="img/logo2.png" alt="">Soulhost</a>
+                    <a href="/soulhost.github.io/index-2.html"><img src="{{ site.baseurl }}/img/logo.png" data-retina="img/logo2.png" alt="">Soulhost</a>
                 </div>
                 <div class="col-sm-7 col-xs-9 mainmenu">
                     <ul id="mainmenu">
-                        <li><a href="/">Главная</a>
+                        <li><a href="/soulhost.github.io/index-2.html">Главная</a>
                             <!-- <ul class="drop-menu">
                                 <li><a href="{{ site.baseurl }}/index-2.html">Home v1</a></li>
                                 <li><a href="{{ site.baseurl }}/index-3.html">Home v2</a></li>
