--- a/_includes/pricing.html
+++ b/_includes/pricing.html
@@ -7,8 +7,7 @@
                         <h2>Отличные цены</h2>
                         <p>Наши планы для WordPress включают простую настройку, автоматические обновления и резервное копирование, 
                             <br>100% онлайн без ограничения пропускной способности. Используйте любую тему
-                            <br> network uptime with no bandwidth limitations and 24/7 WordPress support. Use any
-                            <br> WordPress или плагин который пожелаете -
+                            <br> или плагин который пожелаете -
                             <span class="blue-text">цена от 99,9&#8381;/мес</span></p>
                     </div>
                 </div>
