--- a/_includes/service.html
+++ b/_includes/service.html
@@ -7,7 +7,7 @@
                         <img src="img/service-img1.png" alt="">
                     </div>
                     <h3>Быстрый</h3>
-                    <p>Полностью на высокоскоростных SSD-дисках. Будь то наши вычислительные инстансы Droplet или Блочное хранилище, все работает на SSD.</p>
+                    <p>Гарантируем супер скорость работы благодаря SSD-диску для вашего сайта, проекта или ИТ-инфраструктуры</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 fadeIn wow" data-wow-delay="0.13s">
@@ -60,7 +60,7 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="service-btm-text">
-                        <h3>С нашим "душевным" сервером, вы можете чувствовать себя в безопасности, как дома! Не забывайте про супер скорость работы благодаря SSD-диску для вашего сайта. <span class="bold-text">И это лишь за 83,3&#8381;/мес</span></h3>
+                        <h3>С нашим "душевным" сервером, вы можете чувствовать себя в безопасности, как дома!  <span class="bold-text">Цена от 83,3&#8381;/мес</span></h3>
                     </div>
                 </div>
                 <div class="col-md-3">
